# django-simple-accounting

./: LICENSE  Makefile  README.md  manage.py  mypy.ini  pyproject.toml  pytest.ini  settings.py  tox.ini
.github/workflows/: github-actions-deployment.yaml  github-actions-main.yaml
simple_accounting/: admin.py  models.py  utils.py
simple_accounting/migrations/: 0001_initial.py
tests/: conftest.py  settings.py  test_transactions.py
