[tool.poetry]
name = "django-simple-accounting"
version = "0.1.4"
description = "Plain and simple accounting module for Django"
authors = ["Šarūnas Navickas <sarunas@griaustinis.lt>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simple_accounting"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.1"
django = "^4.2.2"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
